Disable enn SVP test som ikke helt lar seg løse. Fjern arbeidsforhold id fra enkle arbeidsforhold.